# ai-infn-dashboard

./: .gitignore  pyproject.toml
aiinfn_dash/: __init__.py  __main__.py  auth.py  configuration.py
aiinfn_dash/assets/: vkd.css
aiinfn_dash/board_TEMPLATE/: __init__.py  callbacks.py
aiinfn_dash/board_prom/: __init__.py  callbacks.py  layout.py
aiinfn_dash/board_vkd/: callbacks.py  layout.py
